// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The head component for setting document title should render Quick Add page title correctly 1`] = `
<title>
  Dummy product title | Quick Add
</title>
`;

exports[`The head component for setting document title should render default title correctly 1`] = `
<title>
  Dummy product title
</title>
`;
